--- a/css/media.css
+++ b/css/media.css
@@ -1,2 +1,213 @@
-/*==========  Desktop First  ==========*/
+/*==========	Desktop First	==========*/
 /* Large Devices, Wide Screens */
+@media only screen and (max-width: 1910px) {
+  .question-answer::before {
+    width: 431px;
+    height: 573px;
+  }
+}
+@media only screen and (max-width: 1860px) {
+  .home::after {
+    left: 100px;
+  }
+}
+@media only screen and (max-width: 1560px) {
+  .home::after {
+    left: 10px;
+  }
+  .home::before {
+    height: 138px;
+    width: 139px;
+  }
+  .about-intuition::before {
+    width: 627px;
+    height: 431px;
+  }
+  .practicum-result::before {
+    width: 790px;
+    height: 618px;
+    right: 0;
+    top: 82px;
+    background: radial-gradient(46.46% 46.46% at 50% 53.54%, rgba(255, 255, 255, 0) 0%, #FFF 100%), url("../img/result-img-tablet.png"), lightgray -0.116px 0px/117.371% 100% no-repeat;
+    background-position: center bottom;
+    background-size: 100%;
+  }
+}
+@media only screen and (max-width: 1360px) {
+  .home::before, .home::after {
+    display: none;
+  }
+  .question-answer::before {
+    width: 331px;
+    height: 473px;
+  }
+}
+@media only screen and (max-width: 1200px) {
+  h1 {
+    font-size: 64px;
+  }
+  .h1-number {
+    font-size: 100px;
+  }
+  .home {
+    background: #000 url("../img/bg1-tablet.png") right center no-repeat;
+    background-size: 719px;
+  }
+  .question-answer {
+    background: -webkit-gradient(linear, left top, left bottom, from(rgba(255, 255, 255, 0)), to(#FFF)), url("../img/bg2-tablet.png"), lightgray 50% no-repeat;
+    background: linear-gradient(180deg, rgba(255, 255, 255, 0) 0%, #FFF 100%), url("../img/bg2-tablet.png"), lightgray 50% no-repeat;
+    background-size: cover;
+    background-position: center top;
+  }
+  .question-answer::before {
+    top: 77px;
+    width: 262px;
+    height: 495px;
+    background: url("../img/bg2-decor-tablet.png") no-repeat left center;
+    background-size: 100%;
+  }
+  .blockquote-box {
+    margin: 0 0 64px 80px;
+  }
+  .blockquote-box:last-child {
+    margin: 0 0 64px 369px;
+  }
+  .question-answer-box:last-child {
+    margin-right: 0;
+  }
+  .video-box {
+    height: 381px;
+  }
+  h2 {
+    font-size: 48px;
+  }
+  .about-intuition {
+    padding: 80px 0 130px;
+  }
+  .about-intuition::before {
+    left: 0;
+  }
+  .about-intuition__content {
+    margin: 80px 0 0 auto;
+    max-width: 460px;
+  }
+  .container {
+    padding: 0 10px;
+    max-width: 960px;
+  }
+  .row {
+    margin: 0 -10px;
+  }
+  .w-50, .w-33, .w-25 {
+    padding: 0 10px;
+  }
+  .main-question-wrapper {
+    padding: 70px 45px 64px;
+  }
+  .main-question-wrapper h2 {
+    font-size: 40px;
+  }
+  .main-question-wrapper .box-text {
+    margin: 48px auto;
+  }
+  .for-you-box {
+    padding: 0 10px 0 26px;
+    margin: 0 0 50px;
+  }
+  .for-you-box:nth-child(4), .for-you-box:nth-child(5), .for-you-box:last-child {
+    margin: 0 0 50px;
+  }
+  .about-author {
+    padding: 80px 0 88px;
+  }
+  .about-author__photo {
+    max-width: 460px;
+  }
+  .about-author__photo::before {
+    width: 374.59px;
+    height: 597.714px;
+    left: -99px;
+  }
+  .about-author__content {
+    margin: 50px 0 0;
+  }
+  .about-author__name {
+    max-width: 320px;
+  }
+  .about-author__name h3 {
+    font-size: 40px;
+    margin: 0 auto 24px;
+  }
+  .will-learn {
+    margin: 60px 0 0;
+    padding: 60px 0 42px;
+    background-size: 940px;
+  }
+  .will-learn h2 {
+    margin: 0 0 50px;
+  }
+  .will-learn .btn {
+    margin: 40px auto 0;
+  }
+  .list-check li {
+    margin: 0 0 32px;
+  }
+  .list-check li:last-child {
+    margin: 0;
+  }
+  .theme-learn {
+    margin: 0;
+    padding: 79px 0 64px;
+    background: -webkit-gradient(linear, left bottom, left top, color-stop(10.74%, #FFF), color-stop(50%, rgba(255, 255, 255, 0.21))), -webkit-gradient(linear, left top, left bottom, color-stop(2.41%, #FFF), color-stop(35.19%, rgba(255, 255, 255, 0)), color-stop(35.19%, rgba(255, 255, 255, 0))), url("../img/theme-bg-tablet.png"), lightgray 50% no-repeat;
+    background: linear-gradient(0deg, #FFF 10.74%, rgba(255, 255, 255, 0.21) 50%), linear-gradient(180deg, #FFF 2.41%, rgba(255, 255, 255, 0) 35.19%, rgba(255, 255, 255, 0) 35.19%), url("../img/theme-bg-tablet.png"), lightgray 50% no-repeat;
+    background-position: center;
+    background-size: cover;
+  }
+  .theme-learn-box {
+    padding: 32px 26px;
+  }
+  .practicum-result {
+    padding: 56px 0 0;
+  }
+  .practicum-result h2 {
+    margin: 0 0 63px;
+  }
+  .awaits-after-box {
+    padding: 24px;
+  }
+  .awaits-after-box__icon {
+    width: 80px;
+    height: 80px;
+  }
+  .awaits-after-box__body {
+    width: calc(100% - 80px);
+    padding: 0 0 0 24px;
+  }
+  .stages-registration h2 {
+    font-size: 40px;
+    margin: 0 auto 64px;
+  }
+  .stages-title {
+    font-size: 24px;
+    margin: 0 auto 48px;
+  }
+  .stages-registration-box {
+    margin: 0 30px 0 0;
+  }
+  .stages-registration-box:last-child {
+    margin: 0;
+  }
+  .price::before {
+    background: -webkit-gradient(linear, left top, left bottom, color-stop(63.65%, rgba(255, 255, 255, 0)), color-stop(97.68%, #FFF)), url("../img/price-bg-tablet.png"), lightgray -446.24px 0px/187.547% 100% no-repeat;
+    background: linear-gradient(180deg, rgba(255, 255, 255, 0) 63.65%, #FFF 97.68%), url("../img/price-bg-tablet.png"), lightgray -446.24px 0px/187.547% 100% no-repeat;
+    background-size: cover;
+    background-position: center;
+  }
+  .subscribe {
+    background: url(../img/subscribe-bg-tablet.svg) no-repeat center bottom;
+    background-size: 100%;
+  }
+  footer {
+    padding: 40px 0 20px;
+  }
+}
