--- a/sass/main.sass
+++ b/sass/main.sass
@@ -52,6 +52,7 @@
 	padding: 80px 0 24px
 	background: linear-gradient(180deg, rgba(255, 255, 255, 0.00) 0%, #FFF 100%), url('../img/bg2.png'), lightgray 0px -137.5px / 100% 167.247% no-repeat
 	background-size: cover
+	background-position: center top
 	&::before
 		content: ''
 		position: absolute
@@ -71,6 +72,8 @@
 		font-weight: 500
 		margin: 0 auto 24px
 		line-height: 130%
+		p
+			margin: 0
 		strong
 			font-size: 32px
 			font-weight: bold
@@ -208,7 +211,9 @@
 		text-align: left
 		line-height: 140%
 		margin: 0
-		line-height: .8
+		line-height: 1.1
+		span
+			display: block
 
 .subtitle-text
 	font-weight: normal
@@ -348,6 +353,7 @@
 		left: 50%
 		transform: translate(-50%,0)
 		max-width: 565px
+		z-index: -1
 		&::before
 			content: ''
 			position: absolute
@@ -375,7 +381,7 @@
 			font-weight: 900
 			margin: 0 auto 40px
 	&__content
-		max-width: 340px
+		max-width: 330px
 		margin: 76px 0 0
 
 .wrapper
@@ -440,17 +446,10 @@
 	position: relative
 	z-index: 1
 	background: #fff
-	&::before
-		content: ''
-		position: absolute
-		z-index: -1
-		left: 0
-		top: 0
-		width: 100%
-		height: 100%
-		background: linear-gradient(0deg, #FFF 10.74%, rgba(255, 255, 255, 0.21) 50%), linear-gradient(180deg, #FFF 2.41%, rgba(255, 255, 255, 0.00) 35.19%, rgba(255, 255, 255, 0.00) 35.19%), url('../img/theme-bg.png'), lightgray 0px -716.25px / 100% 167.334% no-repeat
-		background-position: center
-		background-size: cover
+	background: linear-gradient(0deg, #FFF 10.74%, rgba(255, 255, 255, 0.21) 50%), linear-gradient(180deg, #FFF 2.41%, rgba(255, 255, 255, 0.00) 35.19%, rgba(255, 255, 255, 0.00) 35.19%), url('../img/theme-bg.png'), lightgray 0px -716.25px / 100% 167.334% no-repeat
+	background-position: center
+	background-size: cover
+
 	h2
 		margin: 0 0 39px
 
@@ -518,7 +517,7 @@
 	background: #FFF
 	box-shadow: 8px 4px 15px 0px rgba(0, 0, 0, 0.10)
 	display: flex
-	align-items: center
+	align-items: flex-start
 	padding: 17px 32px 20px 20px
 	line-height: 120%
 	&__icon
@@ -540,7 +539,7 @@
 	text-align: center
 	text-transform: uppercase
 	font-size: 40px
-	font: 500px
+	font-weight: 500
 	line-height: 120%
 
 // stages-registration
@@ -589,6 +588,8 @@
 	&__icon
 		@include d-flex
 		margin: 0 auto 28px
+		max-width: 80px
+		width: 100%
 	h3
 		font-size: 32px
 		font-weight: bold
@@ -685,6 +686,7 @@
 		line-height: 120%
 		font-family: $default-font
 		margin: 80px auto 0
+		background: #B9AEFF
 
 .callback-wrapper
 	width: 100%
@@ -695,7 +697,7 @@
 
 .callback-content
 	font-size: 40px
-	max-width: 720px
+	max-width: 630px
 	width: 100%
 	h3
 		font-weight: bold
@@ -706,7 +708,7 @@
 	width: 100%
 	margin: 0 auto
 	[type="submit"]
-		width: 100%
+	width: 100%
 	.label-checkbox
 		color: #000
 		margin: 10px 0 0
