--- a/css/main.css
+++ b/css/main.css
@@ -735,6 +735,9 @@
   max-width: 370px;
   margin: 0 44px 0 0;
 }
+.stages-registration-box:first-child {
+  max-width: 320px;
+}
 .stages-registration-box:first-child .box-text {
   max-width: 228px;
 }
@@ -923,6 +926,8 @@
   max-width: 400px;
   width: 100%;
   margin: 0 auto;
+}
+.form [type=submit] {
   width: 100%;
 }
 .form .label-checkbox {
@@ -941,7 +946,9 @@
 }
 
 .subscribe {
-  padding: 80px 0 138px;
+  position: relative;
+  z-index: 1;
+  padding: 0 0 138px;
   background: url("../img/subscribe-bg.svg") no-repeat center bottom;
   background-size: 100%;
 }
