--- a/sass/main.sass
+++ b/sass/main.sass
@@ -576,6 +576,7 @@
 	max-width: 370px
 	margin: 0 44px 0 0
 	&:first-child
+		max-width: 320px
 		.box-text
 			max-width: 228px
 
@@ -708,7 +709,7 @@
 	width: 100%
 	margin: 0 auto
 	[type="submit"]
-	width: 100%
+		width: 100%
 	.label-checkbox
 		color: #000
 		margin: 10px 0 0
@@ -722,7 +723,9 @@
 
 // subscribe
 .subscribe
-	padding: 80px 0 138px
+	position: relative
+	z-index: 1
+	padding: 0 0 138px
 	background: url('../img/subscribe-bg.svg') no-repeat center bottom
 	background-size: 100%
 	.subtitle
