--- a/sass/style.sass
+++ b/sass/style.sass
@@ -294,6 +294,12 @@ a.color-accent
 		&:last-child
 			margin: 0
 
+.d-pc
+	display: block
+
+.d-mobile
+	display: none	
+
 //checkbox my
 .label-checkbox
 	position: relative
@@ -310,7 +316,7 @@ a.color-accent
 		color: #C1CBFF
 
 .checkbox-custom
-	margin: 0 10px 0 0
+	margin: 2px 10px 0 0
 	position: relative
 	border-radius: 0
 	background-color: #fff
@@ -321,6 +327,4 @@ a.color-accent
 
 .inp-check:checked ~ .checkbox-custom
 	background: $accent
-
-	
 //checkbox my end
